// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Ad Container Snapshots AMP should correctly render a leaderboard ad 1`] = `
.emotion-0 {
  background-color: #F8F8F8;
  margin-top: 0.5rem;
}

.emotion-2 {
  display: none;
  visibility: hidden;
}

@media (min-width: 20rem) {
  .emotion-2 {
    min-height: 5.1875rem;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    -webkit-justify-content: center;
    justify-content: center;
    visibility: visible;
  }
}

@media (min-width: 63rem) {
  .emotion-2 {
    min-height: 17.6875rem;
  }
}

.emotion-4 {
  margin: 0 auto;
  text-align: center;
}

.amp-geo-pending .emotion-6,
.amp-geo-group-gbOrUnknown .emotion-6 {
  display: none;
  visibility: hidden;
}

.emotion-8 {
  font-size: 0.75rem;
  line-height: 1rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #5A5A5A;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  display: block;
  padding: 0.5rem 0;
  text-align: right;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-8 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-8 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

.emotion-8:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div>
  <section
    aria-hidden="true"
    aria-label="Publicidad"
    class="emotion-0 emotion-1"
    data-e2e="advertisement"
    role="region"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <div
          amp-access="toggles.ads.enabled"
          amp-access-hide="true"
          class="emotion-6 emotion-7"
        >
          <a
            class="emotion-8 emotion-9"
            dir="ltr"
            href="https://www.bbc.com/usingthebbc/cookies/"
            tabindex="-1"
          >
            Publicidad
          </a>
          <amp-ad
            data-a4a-upgrade-type="amp-ad-network-doubleclick-impl"
            data-amp-slot-index="0"
            data-block-on-consent="default"
            data-multi-size="320x50,300x50"
            data-npa-on-unknown-consent="true"
            data-slot="/4817/bbccom.test.site.amp.news"
            height="50"
            json="{\\"targeting\\":{\\"slot\\":\\"leaderboard\\",\\"asset_type\\":\\"index\\",\\"channel\\":\\"mundo\\"}}"
            media="(max-width: 62.9375rem)"
            type="doubleclick"
            width="320"
          />
          <amp-ad
            data-a4a-upgrade-type="amp-ad-network-doubleclick-impl"
            data-amp-slot-index="0"
            data-block-on-consent="default"
            data-multi-size="970x250,728x90"
            data-npa-on-unknown-consent="true"
            data-slot="/4817/bbccom.test.site.amp.news"
            height="250"
            json="{\\"targeting\\":{\\"slot\\":\\"leaderboard\\",\\"asset_type\\":\\"index\\",\\"channel\\":\\"mundo\\"}}"
            media="(min-width: 63rem)"
            type="doubleclick"
            width="970"
          />
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`Ad Container Snapshots AMP should correctly render an mpu ad 1`] = `
.emotion-0 {
  background-color: #F8F8F8;
  margin-top: 0.5rem;
}

.emotion-2 {
  display: none;
  visibility: hidden;
  padding: 0;
}

@media (min-width: 18.75rem) {
  .emotion-2 {
    min-height: 17.6875rem;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    -webkit-justify-content: center;
    justify-content: center;
    visibility: visible;
  }
}

.emotion-4 {
  margin: 0 auto;
  text-align: center;
}

.amp-geo-pending .emotion-6,
.amp-geo-group-gbOrUnknown .emotion-6 {
  display: none;
  visibility: hidden;
}

.emotion-8 {
  font-size: 0.75rem;
  line-height: 1rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #5A5A5A;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  display: block;
  padding: 0.5rem 0;
  text-align: right;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-8 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-8 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

.emotion-8:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div>
  <section
    aria-hidden="true"
    aria-label="Publicidad 2"
    class="emotion-0 emotion-1"
    data-e2e="advertisement"
    role="region"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <div
          amp-access="toggles.ads.enabled"
          amp-access-hide="true"
          class="emotion-6 emotion-7"
        >
          <a
            class="emotion-8 emotion-9"
            dir="ltr"
            href="https://www.bbc.com/usingthebbc/cookies/"
            tabindex="-1"
          >
            Publicidad
          </a>
          <amp-ad
            data-a4a-upgrade-type="amp-ad-network-doubleclick-impl"
            data-amp-slot-index="0"
            data-block-on-consent="default"
            data-multi-size="300x250"
            data-npa-on-unknown-consent="true"
            data-slot="/4817/bbccom.test.site.amp.news"
            height="250"
            json="{\\"targeting\\":{\\"slot\\":\\"mpu\\",\\"asset_type\\":\\"index\\",\\"channel\\":\\"mundo\\"}}"
            type="doubleclick"
            width="300"
          />
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`Ad Container Snapshots Canonical should correctly render a leaderboard ad 1`] = `
.emotion-0 {
  background-color: #F8F8F8;
  display: none;
  visibility: hidden;
}

@media (min-width: 20rem) {
  .emotion-0 {
    margin-top: 0.5rem;
    min-height: 5.1875rem;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    -webkit-justify-content: center;
    justify-content: center;
    visibility: visible;
  }
}

@media (min-width: 21rem) {
  .emotion-0 {
    padding: 0 0.5rem;
  }
}

@media (min-width: 25rem) {
  .emotion-0 {
    min-height: 5.8125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-0 {
    min-height: 7.6875rem;
  }
}

@media (min-width: 58.75rem) {
  .emotion-0 {
    min-height: 17.6875rem;
    padding: 0.5rem 1rem;
  }
}

<div>
  <section
    aria-hidden="true"
    aria-label="Publicidad"
    class="emotion-0 emotion-1"
    data-e2e="advertisement"
    role="region"
  >
    <div
      class="dotcom-ad"
      id="dotcom-leaderboard"
    />
  </section>
</div>
`;

exports[`Ad Container Snapshots Canonical should correctly render an mpu ad 1`] = `
.emotion-0 {
  background-color: #F8F8F8;
  display: none;
  visibility: hidden;
  padding: 0;
}

@media (min-width: 18.75rem) {
  .emotion-0 {
    min-height: 5.1875rem;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    -webkit-justify-content: center;
    justify-content: center;
    visibility: visible;
  }
}

@media (min-width: 19.75rem) {
  .emotion-0 {
    padding: 0 0.5rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-0 {
    min-height: 17.6875rem;
  }
}

<div>
  <section
    aria-hidden="true"
    aria-label="Publicidad 2"
    class="emotion-0 emotion-1"
    data-e2e="advertisement"
    role="region"
  >
    <div
      class="dotcom-ad"
      id="dotcom-mpu"
    />
  </section>
</div>
`;
